# crawler

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.Crawler  Dockerfile.Discovery  LICENSE  README.md  apikeyprovider.py  architecture.graffle  crawler.py  crawler.sln  crontab  customlinks.py  discovery.py  requirements.txt
.github/workflows/: build-release-crawler.yml  build-release.yml  publish-docker-image.yml
Core/: Constants.cs  Core.csproj
Core/Entities/: Channel.cs  ChannelPopularity.cs  DisplayItem.cs
Core/Interfaces/: IUseCase.cs
Core/UseCases/: SelectAndStartChannelCrawlerUseCase.cs
Infrastructure/: AddInfrastructure.cs  AddJobQueue.cs  AddMongoDB.cs  Infrastructure.csproj
Infrastructure/Mappings/: AddMongoDBMappings.cs
Infrastructure/Services/: JobQueueService.cs  YoutubeDataService.cs
Presentation/: Presentation.csproj  Startup.cs
Presentation/Properties/: launchSettings.json
src/: main.rs
src/commands/: crawl_channel_command.rs  crawl_videos_command.rs  mod.rs
src/crawler/: additional_channel_crawler.rs  channel_discovery_crawler.rs  channel_update_crawler.rs  mod.rs  new_video_crawler.rs
src/models/: apikey.rs  config.rs  detect_language_response.rs  mod.rs  youtube_channel_details.rs  youtube_channel_subscriptions.rs  youtube_statistics_response.rs  youtube_video_details.rs  youtube_video_feed_response.rs
src/repos/: additional_channel_repo.rs  apikeys_repo.rs  blacklist_repo.rs  channel_repo.rs  mod.rs  non_sailing_channel_repo.rs  sailing_term_repo.rs  settings_repo.rs  subscriber_repo.rs  video_repo.rs  view_repo.rs
src/scraper/: channel_scraper.rs  mod.rs  video_scraper.rs
src/services/: detect_language_service.rs  mod.rs  sailing_terms_service.rs  (+1 more)
(+9 files in other folders)
