[package]
name = "sailing-channels-crawler"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
mongodb = { version = "2.0.2", default-features = false, features = ["tokio-runtime"]}
anyhow = "1.0.48"
reqwest = "0.11"
futures = "0.3"
kafka = "0.8"