[package]
name = "sailing-channels-crawler"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
mongodb = { version = "2.0.2", default-features = false, features = ["tokio-runtime"]}
anyhow = "1.0.48"
futures = "0.3"
log = "0.4.14"
simple_logger = { version = "1.16.0", default-features = false }
chrono = "0.4.19"