[package]
name = "sailing-channels-crawler"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-retry = "0.3"
mongodb = { version = "2.0.2", default-features = false, features = ["tokio-runtime", "bson-chrono-0_4"]}
anyhow = "1.0.48"
futures = "0.3"
log = "0.4.14"
simple_logger = { version = "1.16.0", default-features = false }
chrono = "0.4.19"
reqwest = { version = "0.11.7", features = ["json"] }
serde = "1.0.130"
regex = "1"
figment = { version = "0.10", features = ["json", "env"] }
rand = "0.8.4"
whatlang = "0.12.0"
quick-xml = {version = "0.22.0", features = [ "serialize" ]}